# itwoma

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION.md  FAQ.md  LICENSE  PROJECT_ANALYSIS.md  QUICKSTART.md  README.md
include/: http_client.h  manga.h  parse.h  parser.h  utils.h
src/: http_client.c  main.c  manga.c  parse.c  parser.c  utils.c
